fix contrast error on mobile menu, add med gray variable

--- a/_sass/uswds_overrides.scss
+++ b/_sass/uswds_overrides.scss
@@ -177,7 +177,7 @@ h1, h2, h3, h4{
 @media screen and (max-width: 950px) {
   .usa-nav-primary button,
   .usa-nav-secondary a {
-    color: $color-gray;
+    color: $color-gray-medium;
     font-size: $h5-font-size;
     font-weight: bold;
   }
