--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -27,6 +27,7 @@ $color-blue-dark: #1C304A; // 18F brand color $color-dark
 $color-gray-darkest: #222;
 $color-gray-dark: #333;
 $color-gray: #ddd;
+$color-gray-medium: #555; // added by Bixal because of contrast error in mobile menu
 
 // 18F brand colors
 $color-light:        #b3efff; // $color-light / $color-secondary-light
